--- a/spa/assets/css/views/home.css
+++ b/spa/assets/css/views/home.css
@@ -1,5 +1,5 @@
 #jumbotron {
-    background: url(../../../assets/img/wavey-grid.jpg) center center no-repeat;
+    background: url('../../img/wavey-grid.jpg') center center no-repeat;
     background-size: cover;
     display: flex;
     flex-direction: column;
