Opponent move works, player move is broken

--- a/spa/assets/css/views/rockPaperScissors.css
+++ b/spa/assets/css/views/rockPaperScissors.css
@@ -32,3 +32,9 @@
     max-height: 75px;
     pointer-events: none;
 }
+
+.error {
+    font-size: 1.2em;
+    color: red;
+    font-weight: bold;
+}
